--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -14,43 +14,131 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QWidget" name="gridLayoutWidget">
+   <widget class="QStackedWidget" name="stackedWidget">
     <property name="geometry">
      <rect>
-      <x>69</x>
-      <y>39</y>
-      <width>621</width>
-      <height>341</height>
+      <x>0</x>
+      <y>0</y>
+      <width>801</width>
+      <height>591</height>
      </rect>
     </property>
-    <layout class="QGridLayout" name="gridLayout">
-     <item row="0" column="0">
-      <widget class="QPushButton" name="pushButton">
-       <property name="text">
-        <string>PushButton</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
+    <widget class="QWidget" name="mainPage">
+     <widget class="QWidget" name="gridLayoutWidget">
+      <property name="geometry">
+       <rect>
+        <x>200</x>
+        <y>100</y>
+        <width>391</width>
+        <height>351</height>
+       </rect>
+      </property>
+      <layout class="QGridLayout" name="gridLayout_3">
+       <item row="2" column="0">
+        <widget class="QLabel" name="label_3">
+         <property name="styleSheet">
+          <string notr="true">font: 9pt &quot;Batang&quot;;</string>
+         </property>
+         <property name="text">
+          <string>Number of rows:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="QLabel" name="label_2">
+         <property name="styleSheet">
+          <string notr="true">font: 9pt &quot;Batang&quot;;</string>
+         </property>
+         <property name="text">
+          <string>Number of columns:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="1">
+        <widget class="QSpinBox" name="spinBox_Mine">
+         <property name="styleSheet">
+          <string notr="true">font: 9pt &quot;Batang&quot;;</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1">
+        <widget class="QSpinBox" name="spinBox_Row">
+         <property name="styleSheet">
+          <string notr="true">font: 9pt &quot;Batang&quot;;</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QSpinBox" name="spinBox_Col">
+         <property name="styleSheet">
+          <string notr="true">font: 9pt &quot;Batang&quot;;</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="0">
+        <widget class="QLabel" name="label_4">
+         <property name="styleSheet">
+          <string notr="true">font: 9pt &quot;Batang&quot;;</string>
+         </property>
+         <property name="text">
+          <string>Number of mines:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="0" colspan="2">
+        <widget class="QPushButton" name="beginButton">
+         <property name="styleSheet">
+          <string notr="true">font: 9pt &quot;Batang&quot;;</string>
+         </property>
+         <property name="text">
+          <string>Let's begin!</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="0" colspan="2">
+        <widget class="QLabel" name="label">
+         <property name="styleSheet">
+          <string notr="true">font: 9pt &quot;Batang&quot;;</string>
+         </property>
+         <property name="text">
+          <string>Enter the size of the board (maximum: 25):</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="gamePage">
+     <widget class="QWidget" name="gridLayoutWidget_2">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>40</y>
+        <width>741</width>
+        <height>481</height>
+       </rect>
+      </property>
+      <layout class="QGridLayout" name="gridLayout_4"/>
+     </widget>
+     <widget class="QLabel" name="label_5">
+      <property name="geometry">
+       <rect>
+        <x>70</x>
+        <y>10</y>
+        <width>501</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">font: 9pt &quot;Batang&quot;;</string>
+      </property>
+      <property name="text">
+       <string>Left-click to mark, right-click to reveal!</string>
+      </property>
+     </widget>
+    </widget>
    </widget>
   </widget>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>800</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <widget class="QMenu" name="menuminesweeper_game">
-    <property name="title">
-     <string>minesweeper game</string>
-    </property>
-   </widget>
-   <addaction name="menuminesweeper_game"/>
-  </widget>
-  <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources/>
  <connections/>
